<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/background_light"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<include layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_text_username"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/login_username"
            android:textColor="#333333"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/login_field_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:focusableInTouchMode="true"
            android:textSize="20dp" 
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_text_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/login_pwd"
            android:textColor="#333333"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/login_field_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textSize="20dp" 
            android:ems="10"
            android:inputType="textPassword" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login_btn" />

    </LinearLayout>

</LinearLayout>